--- a/client/views/facebook_stream/facebook_stream.html
+++ b/client/views/facebook_stream/facebook_stream.html
@@ -1,3 +1,4 @@
 <template name="facebookStream">
+	<button class="login">Login with FB</button>
     <button class="last-status">Get FB status</button>
 </template>
