--- a/client/views/haiku/haiku.html
+++ b/client/views/haiku/haiku.html
@@ -1,6 +1,8 @@
 <template name="haiku">
-	A Boydku:
-	<div id="hakiu">
-		{{{haiku}}}
-	</div>	
+	<div class="haiku">
+		{{#each haiku}}
+			<p>{{line}}</p>
+		{{/each}}
+	</div>
+	<button class="btn new">Can I Have Another?</button>
 </template>
