--- a/client/views/haiku/haiku.html
+++ b/client/views/haiku/haiku.html
@@ -4,5 +4,8 @@
 			<p>{{line}}</p>
 		{{/each}}
 	</div>
-	<button class="btn new">Can I Have Another?</button>
+	<div class="next clearfix">
+		<button class="btn bad">Meh.</button>
+		<button class="btn good">I like it!</button>
+	</div>
 </template>
